fixed alignment bug

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body {
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid black;
-    padding: 5px;
 }
 
 
@@ -74,9 +73,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -116,9 +115,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -158,9 +157,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -200,9 +199,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -242,9 +241,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -284,9 +283,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -326,9 +325,9 @@ body {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    font-size: 18px;
+    font-size: 20px;
     padding: 2px;
-    margin-right: 10px;
+    margin-right: 5px;
     text-align: center;
 }
 
